# mono-workshop

./: .env.example  .env.sample  .eslintrc  .eslintrc.json  .gitignore  .jshintrc  Cargo.toml  Dockerfile  Gemfile  README.md  Tweet.js  TwitterClient.js  angular-cli.json  app.json  bower.json  bower.json~  config.ru  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  ember-cli-build.js  index.js  my_app.ru  nodemon.json  package-lock.json  package.json  pet-updater.sqlite  postcss.config.js  rollup.config.js  tsconfig.json  tslint.json
.storybook/: config.ts
Narayan-Gopal-Tribute-Page/: .gitignore  README.md  package.json
app/: .eslintrc  Routes.js  app.global.css  app.html  constants.js  database.js  index.html  index.js  main.dev.js  package.json  router.js
c/: chunk.c  chunk.h  compiler.c  debug.c  debug.h  main  main.c  memory.c  memory.h  object.c  object.h  scanner.c  table.h  value.c  value.h  vm.c  vm.h
calculator/: package.json
config/: application.rb  development.rb  environment.js  routes.rb  secrets.yml
e2e/: app.e2e-spec.ts  app.po.ts
email-demo/: app.ts
fixtures/: User.yml
github-wars/: package.json  webpack.config.js
hacker-news/: .gitignore  package.json
javascript-calculator/: README.md  index.html  package.json  styles.css
js-projects-in-react/: package.json
ls-clone/: Cargo.toml  README.md  build.gradle  settings.gradle
next-react/: .gitignore  package.json
pomodoro-clock/: README.md  index.html  index.js  package.json
public/: data_20151105.json  data_20151106.json  data_20151107.json  (+8 more)
(+911 files in other folders)
