[package]
name = "webdri"
version = "0.1.0"
authors = ["lawrencek0 <l.khadka@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.12.0"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]