[package]
name = "webdri"
version = "0.1.0"
authors = ["lawrencek0 <l.khadka@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.12.0"
futures = "0.3"
tempfile = "3.1.0"

[dependencies.tokio]
version = "0.2"
features = ["macros", "blocking", "fs"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]